# PowerPlatform-OpenSource-Hub

./: .gitignore  404.html  DESIGN.md  LICENSE  PRODUCT.md  README.md  ci_logs.txt  index.html  mkdocs.yml  package-lock.json  requirements.txt  robots.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.impeccable/: design.json  hook.cache.json
Configuration/: GitHubRepositoriesSearchCriteria.json  SentinelRepositories.json
Data/: GitHubRepositoriesDetails.json  GitHubRepositoriesPopularityScoresSnapshot.json  GitHubRepositoriesPopularityScoresSnapshotMetadata.json
Pipeline/: ..test-outputparity-fixture-report.json  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
PipelineRust/: Cargo.toml  README.md
PipelineRust/src/: config.rs  error.rs  github.rs  lib.rs  main.rs  metrics.rs  models.rs  pipeline.rs
Scripts/: ConvertTo-MarkdownTable.ps1  Export-GitHubRepositoriesDetails.ps1  Export-GitHubRepositoriesPopularityScore.ps1  Get-GitHubRepositoryDetails.ps1  Get-ShieldIoBadge.ps1  Invoke-GhCli.ps1  New-ShieldIoBadge.ps1  Search-GitHubRepositories.ps1  Write-MarkdownSection.ps1  Write-ReadmeRepositoriesOpenedToContributionsSection.ps1  Write-ReadmeSummarySection.ps1  Write-ReadmeTopGrowingRepositoriesSection.ps1
Website/: .gitignore  README.md  astro.config.mjs  docusaurus.config.ts  jest.config.ts  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
blog/: atom.xml  index.html  rss.xml
community-registry/: README.md  package-lock.json  package.json  (+1 more)
(+4672 files in other folders)
