[package]
name = "pipeline-rust"
version = "0.1.0"
edition = "2021"
description = "Isolated Rust candidate for generating PowerPlatform Open Source Hub repository data."
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

